--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Mi Nombre. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Andres Zamudio. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
